--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 2</title>
+    <title>FIFA World Cup</title>
+    <!-- added fav-icon -->
+    <link rel="icon" type="image/x-icon" href="image/futbol.svg">
+
     <!-- Font awesome -->
     <link rel="stylesheet" href="styles/all.min.css">
     <!-- script not working so manually added font awesome as css -->
@@ -21,10 +24,12 @@
         <section class="header-style">
             <div class="left-header-info">
                 <h1>The Greatest Show On The Earth</h1>
-                <p class="paragraph-info">Football is like life - it requires perseverance, self-denial, hard work,
+                <p class="paragraph-info" title="Football is like life - it requires perseverance, self-denial, hard work,
+                sacrifice, dedication and
+                respect for authority.">Football is like life - it requires perseverance, self-denial, hard work,
                     sacrifice, dedication and
                     respect for authority.</p>
-                <!-- icon must be added to watch live -->
+                <!-- icon added near watch live also added hover affect  -->
                 <a class="btn-style" target="_blank" href="https://www.goal.com/en-in">Watch Live  <i class="fa-solid fa-greater-than"></i> </a>
             </div>
 
@@ -229,6 +234,13 @@
         </section>
       
     </main>
+    <!-- Adding View All button in tablet mode using visibility -->
+    <div class="view-All-btn">
+        <a class="btn-style" target="_blank" href="https://www.goal.com/en-in">View All</a>
+    </div>
+    </div>
+
+    <!-- Footer Start -->
     <footer>
         <div class="footer-box">
             <h2>Goal</h2>
@@ -249,17 +261,9 @@
                 <a href="https://github.com/Mahin-Hasan"> <i class="fa-brands fa-github"></i></a>
 
             </div>
-
-            
-
         </div>
 
-
-
     </footer>
-
-   
-
 
 </body>
 
